src/sass/post.scss
@use "_vars.scss";

.post-body {
  padding: 0;
  background: #fff;

  @include vars.phone {
    width: 100%;
  }

  @include vars.tablet {
    width: 90%;
  }

  @include vars.desktop {
    width: 75%;
  }

  ul {
    margin-top: 0;
    margin-bottom: 1em;

    p {
      margin: 0;
    }

    ul {
      margin-bottom: 0;
    }
  }

  hr {
    height: 2px;
    width: 100%;
    background-color: vars.$light-purple;
  }

  blockquote {
    background: #eeeeee;
    margin: 0;
    padding: 1em 2em;
    border-left: 10px solid #ccc;
  }
}

.post-header, .post-closer {
  background: #eeeeee;
  color: vars.$dark-purple;
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 2em;

  h2 {
    margin: 0.5em 0;
    font-size: 1.7em;
  }

  h4 {
    color: vars.$mid-purple;
    margin-bottom: 2em;
  }

  h5 {
    text-align: left;
    margin: 0;
    color: vars.$mid-purple;
    font-weight: 700;
  }

  .input-group {
    @include vars.phone {
      flex-direction: column;

      > * {
        width: 100% !important;
        border-radius: 0;
      }
    }
  }
}

p.large {
  font-size: 4em;
}

.post-content {
  padding: 1em 1.5em;
  background: #fff;

  @include vars.tablet {
    padding: 1.5em 2.5em;
  }
  height: auto;
  line-height: 2em;
  display: flex;
  flex-direction: column;
  color: vars.$dark-purple;
  box-sizing: border-box;

  figcaption {
    text-align: center;
    color: #707070;
    font-style: italic;
  }

  img {
    height: auto;
    width: 100%;
  }

  @include vars.tablet {
    img {
      align-self: center;
      width: auto;
      max-width: 70%;
    }
  }

  button & .button {
    padding: 0.5em;
    margin: 0.5em;
    border-radius: 1em;
  }

  ul.profile-view {
    padding: 0;
  }

  ul.profile-view li img {
    width: 80px;
    height: 80px;
    margin-right: 20px;
    border-radius: 50%;
  }

  ul.profile-view li .block {
    display: block;
    a {
      display: inline-block;

    }
  }

  ul.profile-view li {
    padding: 0.5em;
    background-color: #eeeeee;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    border-radius: 1em;
  }

  .flex-row {
    display: flex;
    flex-direction: row;
  }

  .flex-column {
    display: flex;
    flex-direction: column;
  }

  p.profile-description {
    line-height: 1.5em;
  }
}

// Styling of single ``
p > code {
  background: vars.$dark-purple;
  color: vars.$pure-white;
  border-radius: 0.3em;
  padding: 0.15em 0.4em;
  font-size: 0.9em;
  font-family: vars.$font-family-mono;
}

// Opt-in: soft-wrap long lines instead of horizontal scroll.
// Used on /resume so the embedded resume markdown stays readable on narrow viewports.
.wrap-pre pre {
  white-space: pre-wrap;
  word-break: break-word;
}

// Styling of triple ```
pre:not(.warning-message) {
  background-color: vars.$dark-purple;
  background-image: url("../images/rows-triangles.svg");
  background-repeat: repeat-x;
  background-size: 150%;
  background-position: top;
  display: flex;
  padding: 1.5em 1.25em 2em;
  margin: 1em 0;
  color: vars.$pure-white;
  overflow-x: auto;
  font-family: vars.$font-family-mono;
  font-size: 0.9em;
  line-height: 1.6em;
  border-radius: 0.5em;
  box-shadow: 0 2px 8px rgba(62, 55, 93, 0.25);
}

.post-closer {
  a {
    text-decoration: none;
  }
}

